--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="strong">#3F414E</color>
     <color name="light">#A1A4B2</color>
+    <color name="purt">#8E97FD</color>
+    <color name="TELOL">#FAF7F2</color>
 </resources>
