--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg"    >
 
     <TextView
         android:id="@+id/textView"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:fontFamily="@font/montserratbold"
-        android:text="SILENCIO"
+        android:text="@string/silencio"
         android:textColor="@color/strong"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -29,7 +29,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/todo" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -39,14 +40,15 @@
         android:background="@drawable/vector_log_iin_"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
-        android:text="We are what we do"
+        android:text="@string/we_are_what_we_do"
         android:textColor="@color/strong"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -60,7 +62,7 @@
         android:layout_height="52dp"
         android:layout_marginTop="14dp"
         android:fontFamily="@font/oswaldlight"
-        android:text="Thousand of people are usign silencio for small meditations"
+        android:text="@string/thousand"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +72,7 @@
         />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/signUp"
         android:layout_width="374dp"
         android:layout_height="63dp"
         android:layout_marginTop="62dp"
@@ -78,7 +80,9 @@
         app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:srcCompat="@drawable/button" />
+        app:srcCompat="@drawable/button"
+
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/textView4"
@@ -86,23 +90,23 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/oswaldmedium"
-        android:text="ALREADY HAVE AN ACCOUNT?"
+        android:text="@string/already_have_an_account"
         android:textColor="@color/light"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.32"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/signUp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/oswaldmedium"
-        android:text="LOG IN"
+        android:text="@string/log_in"
         android:textColor="#8E97FD"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/signUp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
