--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/strelka" />
+        app:srcCompat="@drawable/strelka"
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/textView5"
@@ -24,9 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="133dp"
         android:fontFamily="@font/montserratbold"
-        android:text="Welcome Back!"
+        android:text="@string/welcome_back"
         android:textColor="@color/strong"
-        android:textSize="28dp"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +41,8 @@
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:srcCompat="@drawable/gugl" />
+        app:srcCompat="@drawable/gugl"
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/textView6"
@@ -48,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/montserratbold"
-        android:text="OR LOG IN WITH EMAIL"
+        android:text="@string/or_log_in_with_email"
         android:textColor="@color/light"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +66,9 @@
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:srcCompat="@drawable/email" />
+        app:srcCompat="@drawable/email"
+        android:contentDescription="
+" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -75,7 +79,8 @@
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:srcCompat="@drawable/login" />
+        app:srcCompat="@drawable/login"
+        android:contentDescription="@string/log_in" />
 
     <TextView
         android:id="@+id/textView7"
@@ -83,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/oswaldmedium"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         android:textColor="@color/strong"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +102,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="104dp"
         android:fontFamily="@font/oswaldmedium"
-        android:text="ALREADY HAVE AN ACCOUNT?"
+        android:text="@string/already_have_an_account"
         android:textColor="@color/light"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,10 +112,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/oswaldmedium"
-        android:text="LOG IN"
+        android:text="@string/log_in"
         android:textColor="#8E97FD"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        tools:layout_editor_absoluteY="833dp" />
+        tools:layout_editor_absoluteY="833dp"
+        tools:ignore="MissingConstraints" />
 
 
+    1+
 </androidx.constraintlayout.widget.ConstraintLayout>
