--- a/app/src/main/res/layout/activity_eight.xml
+++ b/app/src/main/res/layout/activity_eight.xml
@@ -128,7 +128,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/Atention"
         android:layout_width="158dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
@@ -145,7 +145,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/body_scan"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView20" />
+        app:layout_constraintTop_toBottomOf="@+id/Atention" />
 
     <ImageView
         android:layout_width="174dp"
