--- a/app/src/main/res/layout/activity_five.xml
+++ b/app/src/main/res/layout/activity_five.xml
@@ -34,13 +34,15 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <ImageView
+        android:id="@+id/ReduceStress"
         android:layout_width="377dp"
         android:layout_height="858dp"
-        android:background="@drawable/content5"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/group_6863"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="247dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
