--- a/app/src/main/res/layout/activity_nine.xml
+++ b/app/src/main/res/layout/activity_nine.xml
@@ -53,19 +53,21 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView13" />
 
     <ImageView
+        android:id="@+id/daysseven"
         android:layout_width="377dp"
         android:layout_height="358dp"
         android:background="@drawable/__dayds"
         tools:layout_editor_absoluteX="19dp"
         tools:layout_editor_absoluteY="435dp" />
 
-    <ImageView
-        android:layout_width="414dp"
-        android:layout_height="112dp"
-        android:background="@drawable/footer2"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="755dp" />
+        app:menu="@menu/menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
